WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291433
[Catalyst] "visibilitychange" event is not always dispatched when closing windows
https://bugs.webkit.org/show_bug.cgi?id=291433
Summary
[Catalyst] "visibilitychange" event is not always dispatched when closing win...
Aditya Keerthi
Reported
2025-04-11 10:09:12 PDT
rdar://148773181
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2025-04-11 10:12:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/43959
EWS
Comment 2
2025-04-15 19:24:14 PDT
Committed
293743@main
(e41237fcf56f): <
https://commits.webkit.org/293743@main
> Reviewed commits have been landed. Closing PR #43959 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug